# speex_test

./: CMakeLists.txt  build.sh  test_resmple.c  test_speex.c
include/: Makefile
include/speex/: Makefile
libspeexdsp/: Makefile  config.h
